--- a/index.html
+++ b/index.html
@@ -3,229 +3,230 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tharu's Secure Access</title>
+    <title>For Tharu ❤️</title>
     <style>
         :root {
-            --primary: #ff4d6d;
-            --secondary: #ff758c;
-            --dark: #0a0a0a;
-            --glass: rgba(255, 255, 255, 0.1);
+            --soft-pink: #fff0f3;
+            --deep-rose: #ff4d6d;
+            --gold: #ffd700;
         }
 
-        body, html {
+        body {
             margin: 0;
             padding: 0;
-            width: 100%;
-            height: 100%;
+            height: 100vh;
+            background: linear-gradient(135deg, #fce4ec 0%, #ffc1cc 100%);
+            font-family: 'Poppins', sans-serif;
             overflow: hidden;
-            background: var(--dark);
-            font-family: 'Segoe UI', Roboto, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
-        /* Live Background Canvas */
-        #canvas {
+        /* Animated Background Elements */
+        .floating {
             position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            pointer-events: none;
             z-index: 1;
+            animation: float 6s infinite linear;
         }
 
-        /* Glassmorphism UI */
+        @keyframes float {
+            0% { transform: translateY(100vh) rotate(0deg); opacity: 1; }
+            100% { transform: translateY(-10vh) rotate(360deg); opacity: 0; }
+        }
+
+        /* Glassmorphism Card */
         .card {
             position: relative;
             z-index: 10;
-            background: var(--glass);
-            backdrop-filter: blur(15px);
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            border-radius: 20px;
+            background: rgba(255, 255, 255, 0.9);
+            backdrop-filter: blur(10px);
             padding: 40px;
+            border-radius: 30px;
             text-align: center;
-            box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.8);
-            width: 320px;
-            color: white;
-            animation: fadeIn 1s ease;
+            width: 340px;
+            box-shadow: 0 15px 35px rgba(255, 77, 109, 0.2);
+            border: 2px solid white;
         }
 
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
+        h2 { color: var(--deep-rose); margin-bottom: 10px; }
 
-        .hidden { display: none !important; }
-
-        /* Inputs & Buttons */
         input {
-            width: 90%;
+            width: 85%;
             padding: 12px;
             margin: 20px 0;
-            border-radius: 10px;
-            border: none;
-            background: rgba(0, 0, 0, 0.5);
-            color: var(--primary);
+            border-radius: 50px;
+            border: 2px solid #ffccd5;
             text-align: center;
-            font-weight: bold;
+            font-size: 1rem;
             outline: none;
-            border: 1px solid var(--primary);
+            transition: 0.3s;
         }
+
+        input:focus { border-color: var(--deep-rose); }
 
         .btn {
-            background: var(--primary);
+            background: var(--deep-rose);
             color: white;
-            padding: 12px 25px;
+            padding: 12px 35px;
             border: none;
-            border-radius: 10px;
+            border-radius: 50px;
             cursor: pointer;
             font-weight: bold;
-            transition: 0.3s;
-            text-transform: uppercase;
-            letter-spacing: 1px;
+            font-size: 1rem;
+            box-shadow: 0 4px 15px rgba(255, 77, 109, 0.4);
         }
 
-        .btn:hover { background: var(--secondary); transform: scale(1.05); }
-
-        /* The Runaway Button */
-        #no-btn {
-            position: absolute;
-            background: #555;
+        /* Game Elements */
+        #game-target {
+            font-size: 50px;
+            cursor: pointer;
+            position: fixed;
             z-index: 100;
+            transition: 0.2s;
+            user-select: none;
         }
 
-        /* Loading Bar */
-        #loader {
-            width: 100%;
-            height: 4px;
-            background: #222;
-            margin-top: 10px;
+        /* Lock Animation */
+        #lock-container {
+            font-size: 100px;
+            margin: 20px 0;
             display: none;
         }
-        #progress {
-            width: 0%;
-            height: 100%;
-            background: var(--primary);
-            transition: width 1s;
+
+        .shake { animation: shake 0.5s infinite; }
+        @keyframes shake {
+            0% { transform: rotate(0); }
+            25% { transform: rotate(10deg); }
+            75% { transform: rotate(-10deg); }
+            100% { transform: rotate(0); }
         }
 
-        .heart-beat {
-            font-size: 60px;
-            animation: beat 1s infinite;
+        .open-anim { animation: openLock 1s forwards; }
+        @keyframes openLock {
+            0% { transform: scale(1); opacity: 1; }
+            100% { transform: scale(3); opacity: 0; }
         }
-        @keyframes beat {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.2); }
-            100% { transform: scale(1); }
-        }
+
+        .hidden { display: none; }
     </style>
 </head>
-<body style="display: flex; justify-content: center; align-items: center;">
+<body>
 
-    <canvas id="canvas"></canvas>
+    <div id="bg-elements"></div>
 
-    <div id="login-card" class="card">
-        <h2 style="margin-top:0;">Secure Access</h2>
-        <p>User Identified: <b>Tharu</b></p>
-        <input type="password" id="birthday" placeholder="YYYYMMDD">
-        <button class="btn" onclick="startHack()">Unlock Heart</button>
-        <div id="loader"><div id="progress"></div></div>
+    <div class="card" id="login-card">
+        <h2>Hi Tharu! 🌸</h2>
+        <p style="color: #888;">Enter your special code to enter</p>
+        <input type="password" id="pass" placeholder="Your Birthday (YYYYMMDD)">
+        <br>
+        <button class="btn" onclick="checkPass()">Unlock My Heart</button>
     </div>
 
-    <div id="game-card" class="card hidden">
-        <h2>System Decrypted!</h2>
-        <p>Tharu, will you be my Valentine?</p>
-        <div style="height: 100px; margin-top: 20px;">
-            <button class="btn" onclick="showSurprise()">YES</button>
-            <button class="btn" id="no-btn" onmouseover="dodge()">NO</button>
-        </div>
+    <div id="game-info" class="hidden" style="position:fixed; top:20px; color:var(--deep-rose); font-weight:bold; z-index:100; font-size: 1.2rem;">
+        Tharu, catch 5 hearts! ❤️: <span id="score">0</span>/5
     </div>
+    <div id="game-target" class="hidden" onclick="catchHeart()">❤️</div>
 
-    <div id="final-card" class="card hidden" style="background: rgba(255, 77, 109, 0.8);">
-        <div class="heart-beat">❤️</div>
-        <h1>Happy Valentine's Day, Tharu!</h1>
-        <p>You've successfully bypassed all security protocols to my heart.</p>
-        <p>I love you!</p>
+    <div id="lock-container" class="shake">🔒</div>
+
+    <div class="card hidden" id="wish-card">
+        <div style="font-size: 60px;">🌹</div>
+        <h2 style="font-size: 1.8rem;">Happy Valentine's Day, Tharu!</h2>
+        <p style="color: #555; line-height: 1.6;">
+            My dearest Tharu,<br><br>
+            You make every day feel like a beautiful dream. I'm so lucky to have someone as wonderful as you in my life.
+        </p>
+        <p style="color: var(--deep-rose); font-weight: bold; font-size: 1.3rem; margin-top: 20px;">
+            I Love You! ❤️
+        </p>
     </div>
 
     <script>
-        // --- Particle Background Engine ---
-        const canvas = document.getElementById('canvas');
-        const ctx = canvas.getContext('2d');
-        let particles = [];
-
-        function initCanvas() {
-            canvas.width = window.innerWidth;
-            canvas.height = window.innerHeight;
-        }
-        window.addEventListener('resize', initCanvas);
-        initCanvas();
-
-        class Particle {
-            constructor() {
-                this.x = Math.random() * canvas.width;
-                this.y = Math.random() * canvas.height;
-                this.size = Math.random() * 3 + 1;
-                this.speedX = Math.random() * 1 - 0.5;
-                this.speedY = Math.random() * 1 - 0.5;
-                this.color = Math.random() > 0.5 ? '#ff4d6d' : '#ffffff';
-            }
-            update() {
-                this.x += this.speedX;
-                this.y += this.speedY;
-                if (this.x > canvas.width) this.x = 0;
-                if (this.x < 0) this.x = canvas.width;
-                if (this.y > canvas.height) this.y = 0;
-                if (this.y < 0) this.y = canvas.height;
-            }
-            draw() {
-                ctx.fillStyle = this.color;
-                ctx.beginPath();
-                ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
-                ctx.fill();
-            }
+        // 1. Create moving background
+        const bg = document.getElementById('bg-elements');
+        const icons = ['🌸', '💖', '✨', '🌹'];
+        for (let i = 0; i < 25; i++) {
+            let el = document.createElement('div');
+            el.className = 'floating';
+            el.innerHTML = icons[Math.floor(Math.random() * icons.length)];
+            el.style.left = Math.random() * 100 + 'vw';
+            el.style.animationDuration = (Math.random() * 4 + 3) + 's';
+            el.style.animationDelay = Math.random() * 5 + 's';
+            el.style.fontSize = (Math.random() * 20 + 10) + 'px';
+            bg.appendChild(el);
         }
 
-        for(let i=0; i<100; i++) particles.push(new Particle());
+        // 2. Logic
+        let score = 0;
 
-        function animate() {
-            ctx.clearRect(0,0,canvas.width, canvas.height);
-            particles.forEach(p => { p.update(); p.draw(); });
-            requestAnimationFrame(animate);
-        }
-        animate();
-
-        // --- Game Logic ---
-        function startHack() {
-            const pass = document.getElementById('birthday').value;
-            if(pass === "20060624") {
-                document.getElementById('loader').style.display = 'block';
-                document.getElementById('progress').style.width = '100%';
-                setTimeout(() => {
-                    document.getElementById('login-card').classList.add('hidden');
-                    document.getElementById('game-card').classList.remove('hidden');
-                }, 1100);
+        function checkPass() {
+            if(document.getElementById('pass').value === "20060624") {
+                document.getElementById('login-card').classList.add('hidden');
+                document.getElementById('game-info').classList.remove('hidden');
+                document.getElementById('game-target').classList.remove('hidden');
+                moveHeart();
             } else {
-                alert("Unauthorized! Only Tharu can access this.");
+                alert("Only Tharu can enter! ❤️");
             }
         }
 
-        function dodge() {
-            const btn = document.getElementById('no-btn');
-            const x = Math.random() * (window.innerWidth - 200);
-            const y = Math.random() * (window.innerHeight - 100);
-            btn.style.left = x + 'px';
-            btn.style.top = y + 'px';
+        function moveHeart() {
+            const heart = document.getElementById('game-target');
+            const x = Math.random() * (window.innerWidth - 80);
+            const y = Math.random() * (window.innerHeight - 80);
+            heart.style.left = x + 'px';
+            heart.style.top = y + 'px';
         }
 
-        function showSurprise() {
-            document.getElementById('game-card').classList.add('hidden');
-            document.getElementById('final-card').classList.remove('hidden');
-            // Change particles to hearts
-            particles = [];
+        function catchHeart() {
+            score++;
+            document.getElementById('score').innerText = score;
+            if(score < 5) {
+                moveHeart();
+            } else {
+                finishGame();
+            }
+        }
+
+        function finishGame() {
+            document.getElementById('game-info').classList.add('hidden');
+            document.getElementById('game-target').classList.add('hidden');
+            const lock = document.getElementById('lock-container');
+            lock.style.display = 'block';
+            
+            setTimeout(() => {
+                lock.innerHTML = '🔓';
+                lock.classList.remove('shake');
+                lock.classList.add('open-anim');
+                setTimeout(() => {
+                    lock.style.display = 'none';
+                    document.getElementById('wish-card').classList.remove('hidden');
+                    confettiEffect();
+                }, 800);
+            }, 1500);
+        }
+
+        function confettiEffect() {
             for(let i=0; i<50; i++) {
-                const p = new Particle();
-                p.color = "#ffffff";
-                particles.push(p);
+                createPetal(); // Reuse the floating logic for a "burst"
             }
+        }
+        
+        function createPetal() {
+            let el = document.createElement('div');
+            el.className = 'floating';
+            el.innerHTML = '❤️';
+            el.style.left = '50vw';
+            el.style.top = '50vh';
+            el.style.transition = '2s';
+            document.body.appendChild(el);
+            setTimeout(() => {
+                el.style.left = Math.random() * 100 + 'vw';
+                el.style.top = Math.random() * 100 + 'vh';
+                el.style.opacity = '0';
+            }, 100);
         }
     </script>
 </body>
